--- a/app/views/blog-list.html
+++ b/app/views/blog-list.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 mx-auto">
         <h1 ng-hide="searchQuery" class="text-center">Blog List</h1>
-        <h1 ng-show="searchQuery" class="text-center">Resuls for {{query}}</h1>
+        <h1 ng-show="searchQuery" class="text-center">Results for {{query}}</h1>
         <div class="row pb-2">
             <div class="col-12 col-md-6 pb-2">
                 <input type="text" ng-model="query" class="form-control" placeholder="Filter">
