Improved Blog Detail UI, included developer's website

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -110,6 +110,18 @@ body {
     font-size: 0.8em;
     padding-top: 20px;
   }
+  h1 {
+    font-size: 2.5em;
+  }
+  h2 {
+    font-size: 1.8em;
+  }
+  h3 {
+    font-size: 1.4em;
+  }
+  p {
+    font-size: 98%;
+  }
 }
 
 .delete-icon {
