--- a/app/views/about.html
+++ b/app/views/about.html
@@ -15,6 +15,14 @@
     </a>
     <br />
 </div>
+<div class="btn-o">
+  <a id="github-button" class="btn btn-primary btn-sm" title="Developer's website"
+    href="https://www.pakkianlew.com" target="blank">
+      <i class="fa fa-globe"></i>
+      <span class="label">Developer's website</span>
+  </a>
+  <br />
+</div>
 <article>
   <p>This is a simple blog web application that is taught in udemy - <b>Try AngularJS: Beginner's Guide to Front Web Devloper</b> course.</p>
   <p>What are taught in the course:-</p>
