--- a/app/views/blog-list.html
+++ b/app/views/blog-list.html
@@ -23,7 +23,8 @@
         </div>
     </div>
     <div class="row text-center">
-        <div class="col-12 col-sm-12" dir-paginate="item in items | orderBy: order | filter: query | itemsPerPage: 5 as postItems" pagination_id="sub-content">
+        <div class="col-12 col-sm-12" dir-paginate="item in items | orderBy: order | filter: query | itemsPerPage: 5 as postItems"
+          pagination_id="sub-content" current-page="pagination.currentPage">
             <div class="thumbnail">
                 <a ng-href="/blog/{{ item.id }}" ng-if="item.image">
                     <img class="img-fluid pl-3 pr-3 pb-2" ng-src="{{ item.image }}" alt="">
@@ -31,7 +32,9 @@
                 <div class="caption">
                     <h3><a ng-href="/blog/{{ item.id }}">{{ item.title }}</a></h3>
                     <p>{{ item.text }} {{ item.publishDate }}</p>
-                    <p><a ng-href="/blog/{{ item.id }}" class="btn btn-primary">View</a></p>
+                    <p><!-- a ng-href="/blog/{{ item.id }}" class="btn btn-primary">View</a-->
+                      <a ng-click="goToItem(item)" class="btn btn-primary btn-blog-view">View</a>
+                    </p>
                 </div>
             </div>
         </div>
