--- a/app/views/about.html
+++ b/app/views/about.html
@@ -39,5 +39,7 @@
     <li>Use Yeoman generator-angular to create project</li>
     <li>Use grunt for development and deployment</li>
     <li>Use bootstrap modal dialog to confirm deleting comment</li>
+    <li>Return to the paginating page when user left to detail page</li>
+    <li>Use font awesome in the application</li>
   </ul>
 </article>
