Improve about page

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -21,10 +21,11 @@
       <i class="fa fa-globe"></i>
       <span class="label">Developer's website</span>
   </a>
-  <br />
+  <br>
+  <br>
 </div>
 <article>
-  <p>This is a simple blog web application that is taught in udemy - <b>Try AngularJS: Beginner's Guide to Front Web Devloper</b> course.</p>
+  <p>This is a simple blog web application is taught in udemy - <b>Try AngularJS: Beginner's Guide to Front Web Devloper</b> course.</p>
   <p>What are taught in the course:-</p>
   <ul>
     <li>How to write directive</li>
@@ -39,7 +40,12 @@
     <li>Use Yeoman generator-angular to create project</li>
     <li>Use grunt for development and deployment</li>
     <li>Use bootstrap modal dialog to confirm deleting comment</li>
-    <li>Return to the paginating page when user left to detail page</li>
+    <li>Return to the paginating page when user move to detail page</li>
     <li>Use font awesome in the application</li>
   </ul>
+  <p>Future improvememt</p>
+  <ul>
+    <li>Include data management (Add, Edit and Delete)</li>
+    <li>Store data in local storage and mongodb</li>
+    <li>Sign up / Login functionality</li>
 </article>
